Bug 43370 - Footnotes always uses numbering by chapter for position "End of document"
Summary: Footnotes always uses numbering by chapter for position "End of document"
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: high normal
Assignee: Justin L
URL:
Whiteboard: target:5.4.0 target:5.3.0.2
Keywords:
: 116517 142054 (view as bug list)
Depends on:
Blocks: Footnote-Endnote
  Show dependency treegraph
 
Reported: 2011-11-30 04:41 UTC by Aron Boss
Modified: 2021-05-05 09:08 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Testcase: Footnotes at the end of the document (18.00 KB, application/vnd.oasis.opendocument.text)
2013-10-27 16:16 UTC, Nico Dorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Boss 2011-11-30 04:41:50 UTC
If I choose to generate the footnotes at the end of the document instead of at each page, LibreOffice always generates the footnote numbering per chapter. Choosing per page or per document has no effect.

So the numbering is broken. It does not use the settings in Extra, foot/endnotes.

Sadly, I am not able to publish my book with 276 footnotes.

Libreoffice 3.4.4 Ubuntu 11.10 64 bits
Comment 1 Roman Eisele 2011-12-02 06:36:04 UTC
Well, just a note: if one chooses to generate the footnotes at the end of the document, numbering the footnotes *per page* does not make sense at all, it would cause terrible confusion; so it may be intentional that *this* option does not work.

But, of course, you are totally right that it should be possible to number the footnotes *per document*!
Comment 2 sasha.libreoffice 2012-04-27 05:45:46 UTC
Thanks for bugreport
Not reproducible in 3.5.2 for me (generates only per document)

If problem still exist, please, create small document that demonstrates this problem and attach
Comment 3 Joel Madero 2012-06-07 20:42:18 UTC
Marking as NEEDINFO until someone verifies that this is still an issue and attaches document displaying problem
Comment 4 QA Administrators 2013-05-26 22:31:43 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2013-07-08 21:22:02 UTC Comment hidden (obsolete)
Comment 6 Nico Dorn 2013-10-27 16:16:31 UTC
Created attachment 88185 [details]
Testcase: Footnotes at the end of the document

This bug is still valid for LO Version: 4.1.1.2 Build ID: 410m0(Build:2) on Linux.

I created a test document with 3 chapters and 9 footnotes. It is impossible to change the counting from "Per page" to "Per document" in Tools > Footnotes/Endnotes. ("Per chapter" does not even appear.)

This feature is really important for professionals. Setting Importance to "high".
Comment 7 Joel Madero 2013-10-27 17:07:12 UTC
The correct status is UNCONFIRMED, changing now. Also, if you're going to bump up the priority please explain why - we don't want this done just willy nilly and ask that any time it's done there is an explanation in the comment so that QA can either agree or disagree and say why :) Thanks for the additional info
Comment 8 sasha.libreoffice 2013-10-28 08:45:30 UTC
Thanks for attachment.

Steps to reproduce:
0. Start Writer or open first attachment
1. Tools->Footnotes/Endnotes
2. tab "Footnotes" field "Position" radiobutton "End of document"
select it
3. field "Counting": change it to "Per document"
4. Press OK.
5. repeat step 1
Expected: "Per document" remains there
Actually: reverts to "Per page" and works actually as "Per chapter" though there is no such option.

reproduced in 4.1.2
Comment 9 QA Administrators 2015-04-01 14:41:51 UTC Comment hidden (obsolete)
Comment 10 Nico Dorn 2015-04-01 17:07:04 UTC
Bug is still present. See attached document and the steps to reproduce in comment 8.

Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Locale: en_US
OS: Kubuntu 14.04.2 LTS (trusty)
Comment 11 Joseph Hill 2015-08-04 10:19:26 UTC
I'm having the same problem here. I just changed all my footnotes to display at the end of the document in an article to conform with the publisher's specification. When I go into the "Footnotes/Endnotes Settings" dialogue, I'm given the option to count "Per document" or "Per page," but whenever I select "Per document" and "Ok," it just reverts back to "Per page."

This option probably should not even exist, since I can't think of a scenario where someone would want endnotes to start over per page.

For some reason, this bug doesn't happen when I create an empty document and add a bunch of notes. I just happens to longer and more complex document.

I recently upgraded to the most recent version of libreoffice for Mac (4.4.5.2). I had the same problem with the previous version.
Comment 12 QA Administrators 2016-09-20 10:20:59 UTC Comment hidden (obsolete)
Comment 13 Justin L 2016-12-29 14:48:51 UTC
Bug still present in 5.4alpha.
Comment 14 Justin L 2017-01-03 13:04:25 UTC
Very sad that apparently no one has actually looked into this - the fix is very easy.
Caused by author Oliver Specht <os@openoffice.org> 2001-07-02 10:52:55 (GMT)
commit a7afc46b3766e4000ae5a9b8a914ede36bbd2991
#85609# dont allow counting by chapter an positon at end of document

https://cgit.freedesktop.org/libreoffice/core/commit/?id=a7afc46b3766e4000ae5a9b8a914ede36bbd2991
Comment 15 Commit Notification 2017-01-04 14:26:32 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=15ca00601701c50ccdb3d8dbe08ba705787386a7

tdf#43370 docfnote.cxx: return correct FTNNUM for GetNumbering

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2017-01-05 04:30:29 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c63fe08c485baba133ebbeaef28fe97113dded35&h=libreoffice-5-3

tdf#43370 docfnote.cxx: return correct FTNNUM for GetNumbering

It will be available in 5.3.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Timur 2017-01-06 15:37:41 UTC
For position "End of page" counting is "Per page", "Per chapter" or "Per document".
For position "End of document" counting is now "Per document".
Verified. 
Such a great work, fixing something 15 years old, before v1.0. 
I don't know how you found that commit (without bibisecting), could be interesting to explain.
Comment 18 Justin L 2017-01-06 17:58:26 UTC
(In reply to Timur from comment #17)
> Such a great work, fixing something 15 years old, before v1.0. 
> I don't know how you found that commit (without bibisecting), could be
> interesting to explain.

That's because I found the spot that needed fixing first.  After that...
git blame sw/source/ui/misc/docfnote.cxx  - spot changed by uid xxABCdefxx
git blame xxABCdefxx^ sw/source/ui/misc/docfnote.cxx
 -- repeat until you find the ultimate source.
Comment 19 Timur 2018-03-20 09:28:23 UTC
*** Bug 116517 has been marked as a duplicate of this bug. ***
Comment 20 Timur 2021-05-05 09:08:05 UTC
*** Bug 142054 has been marked as a duplicate of this bug. ***