tdf#43370 docfnote.cxx: return correct FTNNUM for GetNumbering

way back in 2001 commit a7afc46b3766e4000ae5a9b8a914ede36bbd2991
removed the option to select per-chapter footnote-numbering for
footnotes placed at the end of the document (or perhaps chapter
since the variable is called FTNPOS_CHAPTER, but the UI refers to
it as document).  So only "Per Document" remained. However the
function GetNumbering was never updated to reflect that fact that
2 options were removed from the list now, instead of one.

So, the UI reported the choice as "Per Page", the only dropdown choice
available was "Per Document", and the actual implemented choice
was "Per Chapter".  How's that for a mess?

Change-Id: Ib8dc3d07c0ef62d39afdd2a1c78c14527649c6df